--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,14 @@
 language: python
 python:
-  - "3.1"
-  - "3.2"
-  - "3.4"
   - "3.6"
 # command to install dependencies
 before_script:
   - wget https://s3-ap-southeast-1.amazonaws.com/dynamodb-local-singapore/dynamodb_local_latest.tar.gz
   - tar -xvzf dynamodb_local_latest.tar.gz
+  - pwd
+  - ls
   - cd dynamodb_local_latest
-  - java -Djava.library.path=\DynamoDBLocal_lib -jar DynamoDBLocal.jar -sharedDb
+  - java -Djava.library.path=./DynamoDBLocal_lib -jar DynamoDBLocal.jar -sharedDb
 #
 script: python dynamodb_dataframes/tests/test_dynamodb.py
 branches:
