--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,11 @@ python:
 before_script:
   - wget https://s3-ap-southeast-1.amazonaws.com/dynamodb-local-singapore/dynamodb_local_latest.tar.gz
   - tar -xvzf dynamodb_local_latest.tar.gz
-  - pwd
-  - ls
-  #- cd dynamodb_local_latest
+  #- pwd
+  #- ls
   - java -Djava.library.path=./DynamoDBLocal_lib -jar DynamoDBLocal.jar -sharedDb
 #
-script: python dynamodb_dataframes/tests/test_dynamodb.py
+script: python -m unittest dynamodb_dataframes/tests/test_dynamodb.py
 branches:
   only:
     - master
