--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,15 @@ python:
 before_script:
   - wget https://s3-ap-southeast-1.amazonaws.com/dynamodb-local-singapore/dynamodb_local_latest.tar.gz
   - tar -xvzf dynamodb_local_latest.tar.gz
-  #- pwd
-  #- ls
   - java -Djava.library.path=./DynamoDBLocal_lib -jar DynamoDBLocal.jar -sharedDb
 #
 script:
- - python -m unittest discover tests
- - coverage run -m unittest discover tests
- - coverage report -m --include dynamodb_dataframes\*
+  - pwd
+  - ls
+  - python --version
+  - python -m unittest discover tests
+  - coverage run -m unittest discover tests
+  - coverage report -m --include dynamodb_dataframes\*
 branches:
   only:
     - master
