--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
   - ls
   - python --version
   - python -m unittest discover tests
-  - coverage run -m unittest discover tests
+  - coverage run --include dynamodb_dataframes\* -m unittest discover tests
   - coverage report -m --include dynamodb_dataframes\*
 branches:
   only:
